TLABWasteIncrement=max_jint fires an assert on SPARC for non-G1 GC mode

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b105

      TLABWasteIncrement=max_intx is okay for G1 on SPARC but other collectors fires an assert.
      ThreadLocalAllocBuffer::refill_waste_limit_increment() is directly used at 'add' instruction but only 13bits are used on that.

      In addition, as current TestOptionsWithRanges.java tests only for default garbage collector if there is no dependency on the flag, we couldn't find this issue before.
      With JDK-8144578 fixed, we don't need a new test for all collectors.

            Assignee:
            Sangheon Kim (Inactive)
            Reporter:
            Sangheon Kim (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: