8144573: TLABWasteIncrement=max_jint fires an assert on SPARC for non-G1 GC mode

Changed to use set64 if TLABWasteIncrement is larger than 4095 before add

Reviewed-by: tschatzl, iveresov